crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__request_header_optional_handlers.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { User } from "./types";

export interface Handlers {
  listUsers(headers: { traceId?: string | undefined }): Promise<User[]>;
}
