crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__request_header_override_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { User } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async listUsers(headers: { apiKey: string }): Promise<User[]> {
    const requestHeaders = new Headers();
    requestHeaders.set("X-Api-Key", String(headers.apiKey));
    const response = await fetch(`${baseUrl}/api/users`, {
      method: "GET",
      headers: requestHeaders,
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return (await response.json()) as User[];
  },
};
