crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__request_header_override_server.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.get("/api/users", async (req: Request, res: Response) => {
    try {
      const headers = {
        apiKey: req.header("X-Api-Key") as string,
      };
      const result = await handlers.listUsers(headers);
      res.json(result);
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  return router;
}
