crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__response_header_envelope_client.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.client
---
// Generated by Phoenix Gen — do not edit manually.

import type { GetPostResult, Post } from "./types";

export let baseUrl = "";

export function setBaseUrl(url: string): void {
  baseUrl = url;
}

export const api = {
  async getPost(id: string): Promise<GetPostResult> {
    const response = await fetch(`${baseUrl}/api/posts/${id}`, {
      method: "GET",
    });
    if (!response.ok) {
      await response.body?.cancel().catch(() => undefined);
      throw new Error(`${String(response.status)}: ${response.statusText}`);
    }
    return {
      body: (await response.json()) as Post,
      ratelimitRemaining: Number(response.headers.get("X-RateLimit-Remaining")),
      requestId: response.headers.get("Request-Id") ?? undefined,
    };
  },
};
