crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__response_header_envelope_handlers.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.handlers
---
// Generated by Phoenix Gen — implement the handler methods below.

import type { GetPostResult } from "./types";

export interface Handlers {
  getPost(id: string): Promise<GetPostResult>;
}
