crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__response_header_envelope_server.snap
---
source: crates/phoenix-codegen/src/typescript.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.get(
    "/api/posts/:id",
    async (req: Request<{ id: string }>, res: Response) => {
      try {
        const id = req.params.id;
        const result = await handlers.getPost(id);
        res.setHeader(
          "X-RateLimit-Remaining",
          String(result.ratelimitRemaining),
        );
        if (result.requestId !== undefined) {
          res.setHeader("Request-Id", String(result.requestId));
        }
        res.json(result.body);
      } catch {
        res.status(500).json({ error: "Internal Server Error" });
      }
    },
  );

  return router;
}
