crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__response_header_envelope_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export interface Post {
  id: number;
  title: string;
}

export interface GetPostResult {
  body: Post;
  ratelimitRemaining: number;
  requestId?: string | undefined;
}
