crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__selective_partial_types.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.types
---
// Generated by Phoenix Gen — do not edit manually.

export interface User {
  id: number;
  name: string;
  email: string;
  age: number;
}

export type PatchUserBody = {
  name: string;
  email?: string;
  age?: number;
};
