crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__server_delete_void.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.delete(
    "/api/users/:id",
    async (req: Request<{ id: string }>, res: Response) => {
      try {
        const id = req.params.id;
        await handlers.deleteUser(id);
        res.status(204).end();
      } catch (error: unknown) {
        if (error instanceof Error) {
          if (error.message === "NotFound") {
            res.status(404).json({ error: "NotFound" });
            return;
          }
        }
        res.status(500).json({ error: "Internal Server Error" });
      }
    },
  );

  return router;
}
