crates/phoenix-codegen/src/snapshots/phoenix_codegen__typescript__tests__server_get_query_params.snap
---
source: crates/phoenix-codegen/src/typescript_tests.rs
expression: files.server
---
// Generated by Phoenix Gen — do not edit manually.

import { Router } from "express";
import type { Request, Response } from "express";
import type { Handlers } from "./handlers";

export function createRouter(handlers: Handlers): Router {
  const router = Router();

  router.get("/api/users", async (req: Request, res: Response) => {
    try {
      const query = {
        page: req.query.page !== undefined ? Number(req.query.page) : 1,
        limit: req.query.limit !== undefined ? Number(req.query.limit) : 20,
        search: req.query.search as string | undefined,
      };
      const result = await handlers.listUsers(query);
      res.json(result);
    } catch {
      res.status(500).json({ error: "Internal Server Error" });
    }
  });

  return router;
}
